Fix button white-space wrap

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,6 +11,10 @@ h3 {
   color: antiquewhite;
 }
 
+.btn {
+  white-space: normal;
+}
+
 .section-title {
   color: #f0f;
 }
